Implement LocalImageRepository add images
